# TBC

./: CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/tbc/: __init__.py  __main__.py  cli.py  core.py
tests/: conftest.py  test_core.py
