[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thebraincollector"
version = "0.1.0.1"
description = "A tool to scan Android devices for ML model weight files via ADB"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
cli = [
    "click>=8.0",
]
all = ["thebraincollector[dev,test,lint,cli]"]

[project.scripts]
tbc = "tbc.__main__:main"

[project.urls]
Homepage = "https://github.com/dclavijo/TBC"
Repository = "https://github.com/dclavijo/TBC"
Issues = "https://github.com/dclavijo/TBC/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tbc"]

[tool.hatch.build.targets.sdist]
include = ["src/tbc"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
